<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Processing</string>
    <string name="action_open">Open</string>
    <string name="select_picture_activity_title">Select Picture</string>
    <string name="title_activity_image_details">Image Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_details">Details</string>
    <string name="image_url_label">File Url:</string>
    <string name="image_resolution_label">Resolution:</string>
    <string name="image_type_label">Image Type:</string>
    <string name="action_histogram_equalize">Histogram Equalize</string>
    <string name="action_save">Save</string>
    <string name="title_activity_about">About</string>
    <string name="author_label">Author:</string>
    <string name="author">King Li</string>
    <string name="email_label">Email:</string>
    <string name="email">do_as_i_want@hotmail.com</string>
    <string name="action_about">About</string>
    <string name="toast_file_saved">File saved!</string>
    <string name="action_laplace_filter">Laplace Filter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_filter_pick_factor">Set the factor for image filter</string>
    <string name="action_ideal_low_pass_filter">Ideal low pass filter</string>
    <string name="action_butterworth_low_pass_filter">Butterworth low pass filter</string>
    <string name="action_gaussian_low_pass_filter">Gaussian low pass filter</string>
    <string name="action_ideal_high_pass_filter">Ideal high pass filter</string>
    <string name="action_butterworth_high_pass_filter">Butterworth high pass filter</string>
    <string name="action_gaussian_high_pass_filter">Gaussian high pass filter</string>
    <string name="content_description">Image</string>

</resources>
