<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ImageProcessingActivity">
    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_open"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_open"/>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_save"/>

    <item
        android:id="@+id/action_details"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_details"/>

    <item
        android:id="@+id/action_histogram_equalize"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_histogram_equalize"/>

    <item
        android:id="@+id/action_laplace_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_laplace_filter"/>

    <item
        android:id="@+id/action_ideal_low_pass_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_ideal_low_pass_filter"/>

    <item
        android:id="@+id/action_butterworth_low_pass_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_butterworth_low_pass_filter"/>

    <item
        android:id="@+id/action_gaussian_low_pass_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_gaussian_low_pass_filter"/>

    <item
        android:id="@+id/action_ideal_high_pass_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_ideal_high_pass_filter"/>

    <item
        android:id="@+id/action_butterworth_high_pass_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_butterworth_high_pass_filter"/>

    <item
        android:id="@+id/action_gaussian_high_pass_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_gaussian_high_pass_filter"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>

</menu>
